# dgm-fsm-lib

./: CMakeLists.txt  Readme.md
.github/workflows/: integration.yml  main.yml
cmake/: cpp.cmake  dependencies.cmake
designer/: index.html  main.js  sigma.min.js
examples/: CMakeLists.txt
examples/01-loggable-blackboard/: CMakeLists.txt  Main.cpp
examples/02-simple-fsm/: CMakeLists.txt  Main.cpp
examples/03-exporting-diagrams/: CMakeLists.txt  Main.cpp
examples/include/: StdoutLogger.hpp
integration_tests/cpm/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Fsm.hpp  FsmFactory.hpp
lib/include/DGM/classes/: Builder.hpp  BuilderContext.hpp  BuilderContextHelper.hpp  CompiledContext.hpp  Compiler.hpp  Error.hpp  ErrorBuilderDetail.hpp  Fsm.hpp  Helper.hpp  NonEmptyString.hpp  StateIndex.hpp  Types.hpp
lib/include/fsm/: Builder.hpp  Error.hpp  Fsm.hpp  Types.hpp
lib/include/fsm/detail/: Helper.hpp
lib/include/fsm/exports/: MermaidExporter.hpp
lib/include/fsm/logging/: CsvLogger.hpp  LoggerInterface.hpp  NullLogger.hpp
lib/src/: Compiler.cpp  CsvLogger.cpp  Helper.cpp  StateIndex.cpp
lib/tests/: FsmFactory.cpp
tests/: CMakeLists.txt
tests/include/: Blackboard.hpp  CsvParser.hpp  StdoutCsvLogger.hpp  TestableLogger.hpp
tests/src/: BuilderTest.cpp  CompilerTest.cpp  FsmTest.cpp  HelperTest.cpp  LoggerTest.cpp  StateIndexTest.cpp
